updates to sd gym
updated gym to gymnasium
added stablebaselines3
created small RL library for testing

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 absl-py
 attrs
 BPTK-Py
-gym
+gymnasium
 netCDF4
 numpy
 pandas
 pysd
 scipy
+stable-baselines3[extra]
+tensorboard
+torch
+torchvision
+tqdm
