--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-absl-py
-attrs
-BPTK-Py
-gymnasium
-netCDF4
-numpy
-pandas
-pysd
-scipy
-stable-baselines3[extra]
-tensorboard
-torch
-torchvision
-tqdm
+absl-py>=0.7.0
+attrs>=19.1.0
+BPTK-Py>=1.0.0
+gymnasium==0.29.1
+netCDF4>=1.5.3
+numpy==1.24.3
+pandas>=1.3.0
+pysd>=3.0.0
+scipy>=1.7.0
+stable-baselines3[extra]==2.1.0
+tensorboard>=2.5.0
+torch==2.0.1
+torchvision>=0.9.0
+tqdm>=4.60.0
